src/front/y.output

state 0
	$accept : _Comp $end 
	ini_all : _    (3)

	.  reduce 3

	Comp  goto 1
	ini_all  goto 2

state 1
	$accept :  Comp_$end 
	Comp :  Comp_ini_all Comp_unit 
	ini_all : _    (3)

	$end  accept
	T_FUNCTION  reduce 3
	T_GENERIC  reduce 3
	T_PACKAGE  reduce 3
	T_PROCEDURE  reduce 3
	T_SEPARATE  reduce 3
	T_USE  reduce 3
	T_WITH  reduce 3
	T_IDENT  reduce 3
	.  error

	ini_all  goto 3

state 2
	Comp :  ini_all_Comp_unit 
	use_init : _    (64)
	context_spec : _    (65)

	T_IDENT  reduce 64
	.  reduce 65

	Comp_unit  goto 4
	use_init  goto 5
	real_unit  goto 6
	c_package  goto 7
	c_packbody  goto 8
	c_subdecl  goto 9
	c_subbody  goto 10
	c_genpack  goto 11
	sep_subbody  goto 12
	sep_packbody  goto 13
	sep_taskbody  goto 14
	c_node  goto 15
	context_spec  goto 16
	c_packbegin  goto 17
	c_packstart  goto 23
	c_substart  goto 18
	c_genstart  goto 19
	c_genbegin  goto 24
	c_gennode  goto 28
	sep_substart  goto 20
	sep_subhead  goto 25
	sep_procid  goto 29
	sep_funcid  goto 30
	sep_packbegin  goto 21
	sep_packstart  goto 26
	sep_taskbegin  goto 22
	sep_taskstart  goto 27

state 3
	Comp :  Comp ini_all_Comp_unit 
	use_init : _    (64)
	context_spec : _    (65)

	T_IDENT  reduce 64
	.  reduce 65

	Comp_unit  goto 31
	use_init  goto 5
	real_unit  goto 6
	c_package  goto 7
	c_packbody  goto 8
	c_subdecl  goto 9
	c_subbody  goto 10
	c_genpack  goto 11
	sep_subbody  goto 12
	sep_packbody  goto 13
	sep_taskbody  goto 14
	c_node  goto 15
	context_spec  goto 16
	c_packbegin  goto 17
	c_packstart  goto 23
	c_substart  goto 18
	c_genstart  goto 19
	c_genbegin  goto 24
	c_gennode  goto 28
	sep_substart  goto 20
	sep_subhead  goto 25
	sep_procid  goto 29
	sep_funcid  goto 30
	sep_packbegin  goto 21
	sep_packstart  goto 26
	sep_taskbegin  goto 22
	sep_taskstart  goto 27

state 4
	Comp :  ini_all Comp_unit_    (1)

	.  reduce 1


state 5
	Comp_unit :  use_init_unit_list 

	T_IDENT  shift 35
	.  error

	unit_list  goto 32
	exception  goto 33
	ex_list  goto 34

state 6
	Comp_unit :  real_unit_    (5)

	.  reduce 5


state 7
	real_unit :  c_package_T_SEM_COL 

	T_SEM_COL  shift 36
	.  error


state 8
	real_unit :  c_packbody_T_SEM_COL 

	T_SEM_COL  shift 37
	.  error


state 9
	real_unit :  c_subdecl_T_SEM_COL 

	T_SEM_COL  shift 38
	.  error


state 10
	real_unit :  c_subbody_T_SEM_COL 

	T_SEM_COL  shift 39
	.  error


state 11
	real_unit :  c_genpack_    (10)

	.  reduce 10


state 12
	real_unit :  sep_subbody_T_SEM_COL 

	T_SEM_COL  shift 40
	.  error


state 13
	real_unit :  sep_packbody_T_SEM_COL 

	T_SEM_COL  shift 41
	.  error


state 14
	real_unit :  sep_taskbody_T_SEM_COL 

	T_SEM_COL  shift 42
	.  error


state 15
	c_package :  c_node_locals privpart T_END opt_id 
	locals : _    (124)

	.  reduce 124

	locals  goto 43

state 16
	c_package :  context_spec_T_PACKAGE T_IDENT T_IS T_NEW instantiation 
	c_subdecl :  context_spec_subspec 
	c_node :  context_spec_T_PACKAGE T_IDENT T_IS 
	context_spec :  context_spec_with_use T_SEM_COL 
	c_substart :  context_spec_subspec T_IS 
	c_packstart :  context_spec_T_PACKAGE T_BODY T_IDENT T_IS 
	sep_packstart :  context_spec_separate T_PACKAGE T_BODY T_IDENT T_IS 
	sep_taskstart :  context_spec_separate T_TASK T_BODY T_IDENT T_IS 
	c_gennode :  context_spec_T_GENERIC 
	sep_procid :  context_spec_separate T_PROCEDURE T_IDENT 
	sep_funcid :  context_spec_separate T_FUNCTION T_IDENT 

	T_FUNCTION  shift 58
	T_GENERIC  shift 48
	T_PACKAGE  shift 44
	T_PROCEDURE  shift 59
	T_SEPARATE  shift 53
	T_USE  shift 57
	T_WITH  shift 56
	.  error

	subspec  goto 45
	separate  goto 47
	with_use  goto 46
	withclause  goto 51
	use_inwith  goto 52
	function_spec  goto 49
	procedure_spec  goto 50
	func_name  goto 54
	proc_name  goto 55

state 17
	c_packbody :  c_packbegin_T_END opt_id 
	c_packbody :  c_packbegin_T_BEGIN statements opt_except T_END opt_id 

	T_BEGIN  shift 61
	T_END  shift 60
	.  error


state 18
	c_subbody :  c_substart_decl_part T_BEGIN statements opt_except T_END opt_id 
	locals : _    (124)

	.  reduce 124

	locals  goto 64
	decl_part  goto 62
	declar_part  goto 63

state 19
	c_genpack :  c_genstart_locals privpart T_END opt_id T_SEM_COL 
	locals : _    (124)

	.  reduce 124

	locals  goto 65

state 20
	sep_subbody :  sep_substart_decl_part T_BEGIN statements opt_except T_END opt_id 
	locals : _    (124)

	.  reduce 124

	locals  goto 64
	decl_part  goto 66
	declar_part  goto 63

state 21
	sep_packbody :  sep_packbegin_T_END opt_id 
	sep_packbody :  sep_packbegin_T_BEGIN statements opt_except T_END opt_id 

	T_BEGIN  shift 68
	T_END  shift 67
	.  error


state 22
	sep_taskbody :  sep_taskbegin_T_BEGIN statements opt_except T_END opt_id 

	T_BEGIN  shift 69
	.  error


state 23
	c_packbegin :  c_packstart_decl_part 
	locals : _    (124)

	.  reduce 124

	locals  goto 64
	decl_part  goto 70
	declar_part  goto 63

state 24
	c_genstart :  c_genbegin_T_PACKAGE T_IDENT T_IS 

	T_PACKAGE  shift 71
	.  error


state 25
	sep_substart :  sep_subhead_T_IS 

	T_IS  shift 72
	.  error


state 26
	sep_packbegin :  sep_packstart_decl_part 
	locals : _    (124)

	.  reduce 124

	locals  goto 64
	decl_part  goto 73
	declar_part  goto 63

state 27
	sep_taskbegin :  sep_taskstart_decl_part 
	locals : _    (124)

	.  reduce 124

	locals  goto 64
	decl_part  goto 74
	declar_part  goto 63

state 28
	c_genbegin :  c_gennode_genpars 
	genpars : _    (28)

	T_TYPE  shift 84
	T_WITH  shift 79
	T_IDENT  shift 83
	.  reduce 28

	genpars  goto 75
	genparlist  goto 76
	genparameter  goto 77
	type_start  goto 78
	array_start  goto 80
	genobjectpar  goto 81
	type_id  goto 82

state 29
	sep_subhead :  sep_procid_procedure_pars 
	procedure_pars : _    (275)

	T_LP  shift 86
	.  reduce 275

	procedure_pars  goto 85

state 30
	sep_subhead :  sep_funcid_function_pars T_RETURN type_name 
	function_pars : _    (273)

	T_LP  shift 88
	.  reduce 273

	function_pars  goto 87

state 31
	Comp :  Comp ini_all Comp_unit_    (2)

	.  reduce 2


state 32
	Comp_unit :  use_init unit_list_    (4)

	.  reduce 4


state 33
	unit_list :  exception_T_SEM_COL locals 

	T_SEM_COL  shift 89
	.  error


state 34
	exception :  ex_list_    (137)

	.  reduce 137


state 35
	exception :  T_IDENT_T_COLON T_EXCEPTION T_RENAMES ls_name 
	ex_list :  T_IDENT_T_COLON T_EXCEPTION 
	ex_list :  T_IDENT_T_COMMA ex_list 

	T_COLON  shift 90
	T_COMMA  shift 91
	.  error


state 36
	real_unit :  c_package T_SEM_COL_    (6)

	.  reduce 6


state 37
	real_unit :  c_packbody T_SEM_COL_    (7)

	.  reduce 7


state 38
	real_unit :  c_subdecl T_SEM_COL_    (8)

	.  reduce 8


state 39
	real_unit :  c_subbody T_SEM_COL_    (9)

	.  reduce 9


state 40
	real_unit :  sep_subbody T_SEM_COL_    (11)

	.  reduce 11


state 41
	real_unit :  sep_packbody T_SEM_COL_    (12)

	.  reduce 12


state 42
	real_unit :  sep_taskbody T_SEM_COL_    (13)

	.  reduce 13


state 43
	c_package :  c_node locals_privpart T_END opt_id 
	locals :  locals_declaration T_SEM_COL 
	privpart : _    (108)

	T_FUNCTION  shift 58
	T_GENERIC  shift 136
	T_PACKAGE  shift 119
	T_PRAGMA  shift 121
	T_PRIVATE  shift 106
	T_PROCEDURE  shift 59
	T_SUBTYPE  shift 130
	T_TASK  shift 135
	T_TYPE  shift 84
	T_USE  shift 120
	T_IDENT  shift 107
	.  reduce 108

	privpart  goto 92
	subspec  goto 100
	type_start  goto 126
	array_start  goto 128
	useclause  goto 101
	pragma  goto 102
	exception  goto 105
	gen_package  goto 98
	genbegin  goto 118
	gennode  goto 132
	package  goto 97
	p_node  goto 117
	gen_instance  goto 99
	taskname  goto 133
	taskobject  goto 104
	tn  goto 125
	tasktypestart  goto 131
	tasktype  goto 115
	priv_node  goto 94
	declaration  goto 93
	object_decl  goto 95
	type_decl  goto 96
	renamer  goto 103
	ex_list  goto 34
	record_type  goto 109
	private_type  goto 108
	array_type  goto 110
	enum_type  goto 111
	incomplete_type  goto 112
	subtype  goto 113
	access_type  goto 114
	newtype_decl  goto 116
	record_start  goto 127
	type_id  goto 82
	enumstart  goto 129
	enum_name  goto 134
	function_spec  goto 49
	procedure_spec  goto 50
	func_name  goto 54
	proc_name  goto 55
	renobject  goto 122
	ren_sub  goto 123
	ren_pack  goto 124

state 44
	c_package :  context_spec T_PACKAGE_T_IDENT T_IS T_NEW instantiation 
	c_node :  context_spec T_PACKAGE_T_IDENT T_IS 
	c_packstart :  context_spec T_PACKAGE_T_BODY T_IDENT T_IS 

	T_BODY  shift 138
	T_IDENT  shift 137
	.  error


state 45
	c_subdecl :  context_spec subspec_    (21)
	c_substart :  context_spec subspec_T_IS 

	T_IS  shift 139
	.  reduce 21


state 46
	context_spec :  context_spec with_use_T_SEM_COL 

	T_SEM_COL  shift 140
	.  error


state 47
	sep_packstart :  context_spec separate_T_PACKAGE T_BODY T_IDENT T_IS 
	sep_taskstart :  context_spec separate_T_TASK T_BODY T_IDENT T_IS 
	sep_procid :  context_spec separate_T_PROCEDURE T_IDENT 
	sep_funcid :  context_spec separate_T_FUNCTION T_IDENT 

	T_FUNCTION  shift 144
	T_PACKAGE  shift 141
	T_PROCEDURE  shift 143
	T_TASK  shift 142
	.  error


state 48
	c_gennode :  context_spec T_GENERIC_    (27)

	.  reduce 27


state 49
	subspec :  function_spec_    (266)

	.  reduce 266


state 50
	subspec :  procedure_spec_    (267)

	.  reduce 267


state 51
	with_use :  withclause_    (67)
	withclause :  withclause_T_COMMA T_IDENT 

	T_COMMA  shift 145
	.  reduce 67


state 52
	with_use :  use_inwith_    (68)
	use_inwith :  use_inwith_T_COMMA ls_name 

	T_COMMA  shift 146
	.  reduce 68


state 53
	separate :  T_SEPARATE_T_LP ct_name T_RP 

	T_LP  shift 147
	.  error


state 54
	function_spec :  func_name_function_pars T_RETURN type_name 
	function_pars : _    (273)

	T_LP  shift 88
	.  reduce 273

	function_pars  goto 148

state 55
	procedure_spec :  proc_name_procedure_pars 
	procedure_pars : _    (275)

	T_LP  shift 86
	.  reduce 275

	procedure_pars  goto 149

state 56
	withclause :  T_WITH_T_IDENT 

	T_IDENT  shift 150
	.  error


state 57
	use_inwith :  T_USE_ls_name 

	T_IDENT  shift 154
	.  error

	ls_name  goto 151
	s_name  goto 152
	l_name  goto 153

state 58
	func_name :  T_FUNCTION_T_IDENT 
	func_name :  T_FUNCTION_T_CHAR_STRING 

	T_CHAR_STRING  shift 156
	T_IDENT  shift 155
	.  error


state 59
	proc_name :  T_PROCEDURE_T_IDENT 

	T_IDENT  shift 157
	.  error


state 60
	c_packbody :  c_packbegin T_END_opt_id 
	opt_id : _    (459)

	T_CHAR_STRING  shift 160
	T_IDENT  shift 159
	.  reduce 459

	opt_id  goto 158

state 61
	c_packbody :  c_packbegin T_BEGIN_statements opt_except T_END opt_id 
	opt_collid : _    (457)

	T_ABORT  shift 204
	T_ACCEPT  shift 213
	T_CASE  shift 207
	T_DELAY  shift 194
	T_EXIT  shift 202
	T_GOTO  shift 191
	T_IF  shift 212
	T_NULL  shift 168
	T_RAISE  shift 193
	T_RETURN  shift 190
	T_SELECT  shift 205
	T_IDENT  shift 201
	T_LS  shift 165
	.  reduce 457

	statements  goto 161
	ls_name  goto 209
	x_name  goto 203
	name  goto 192
	s_name  goto 210
	l_name  goto 211
	stat  goto 162
	lab_stat  goto 163
	statement  goto 164
	basic_stat  goto 166
	compound  goto 167
	if_stat  goto 170
	case_stat  goto 171
	select_stat  goto 172
	sa_accept  goto 173
	tagged_stat  goto 174
	if_begin  goto 184
	if_part  goto 197
	if  goto 206
	case_list  goto 185
	case  goto 198
	select_list  goto 186
	select  goto 199
	accept_stat  goto 187
	delay_stat  goto 181
	abort_stat  goto 182
	abort_l  goto 195
	accept_s  goto 200
	accept_start  goto 208
	opt_collid  goto 188
	bas_stat  goto 169
	exit_stat  goto 175
	return_stat  goto 176
	goto_stat  goto 177
	assignment  goto 178
	raise_stat  goto 179
	proc_call  goto 180
	select_entry  goto 183
	exit_unit  goto 189
	select_call  goto 196

state 62
	c_subbody :  c_substart decl_part_T_BEGIN statements opt_except T_END opt_id 

	T_BEGIN  shift 214
	.  error


state 63
	decl_part :  declar_part_    (115)
	decl_part :  declar_part_repr_clauses 

	T_FOR  shift 218
	.  reduce 115

	repr_clauses  goto 215
	repr_clause  goto 216
	repr_start  goto 217

state 64
	declar_part :  locals_    (122)
	declar_part :  locals_sub_packbody T_SEM_COL body_part 
	locals :  locals_declaration T_SEM_COL 

	T_FUNCTION  shift 58
	T_GENERIC  shift 136
	T_PACKAGE  shift 227
	T_PRAGMA  shift 121
	T_PROCEDURE  shift 59
	T_SUBTYPE  shift 130
	T_TASK  shift 228
	T_TYPE  shift 84
	T_USE  shift 120
	T_IDENT  shift 107
	.  reduce 122

	subspec  goto 224
	type_start  goto 126
	array_start  goto 128
	useclause  goto 101
	pragma  goto 102
	exception  goto 105
	subbody  goto 220
	subhead  goto 225
	substart  goto 230
	gen_package  goto 98
	genbegin  goto 118
	gennode  goto 132
	package  goto 97
	p_node  goto 117
	gen_instance  goto 99
	taskname  goto 133
	taskobject  goto 104
	tn  goto 125
	tasktypestart  goto 131
	tasktype  goto 115
	packbody  goto 223
	pack_start  goto 229
	p_body  goto 232
	sub_packbody  goto 219
	declaration  goto 93
	object_decl  goto 95
	type_decl  goto 96
	renamer  goto 103
	ex_list  goto 34
	taskbody  goto 221
	stub  goto 222
	task_start  goto 226
	t_body  goto 231
	record_type  goto 109
	private_type  goto 108
	array_type  goto 110
	enum_type  goto 111
	incomplete_type  goto 112
	subtype  goto 113
	access_type  goto 114
	newtype_decl  goto 116
	record_start  goto 127
	type_id  goto 82
	enumstart  goto 129
	enum_name  goto 134
	function_spec  goto 49
	procedure_spec  goto 50
	func_name  goto 54
	proc_name  goto 55
	renobject  goto 122
	ren_sub  goto 123
	ren_pack  goto 124

state 65
	c_genpack :  c_genstart locals_privpart T_END opt_id T_SEM_COL 
	locals :  locals_declaration T_SEM_COL 
	privpart : _    (108)

	T_FUNCTION  shift 58
	T_GENERIC  shift 136
	T_PACKAGE  shift 119
	T_PRAGMA  shift 121
	T_PRIVATE  shift 106
	T_PROCEDURE  shift 59
	T_SUBTYPE  shift 130
	T_TASK  shift 135
	T_TYPE  shift 84
	T_USE  shift 120
	T_IDENT  shift 107
	.  reduce 108

	privpart  goto 233
	subspec  goto 100
	type_start  goto 126
	array_start  goto 128
	useclause  goto 101
	pragma  goto 102
	exception  goto 105
	gen_package  goto 98
	genbegin  goto 118
	gennode  goto 132
	package  goto 97
	p_node  goto 117
	gen_instance  goto 99
	taskname  goto 133
	taskobject  goto 104
	tn  goto 125
	tasktypestart  goto 131
	tasktype  goto 115
	priv_node  goto 94
	declaration  goto 93
	object_decl  goto 95
	type_decl  goto 96
	renamer  goto 103
	ex_list  goto 34
	record_type  goto 109
	private_type  goto 108
	array_type  goto 110
	enum_type  goto 111
	incomplete_type  goto 112
	subtype  goto 113
	access_type  goto 114
	newtype_decl  goto 116
	record_start  goto 127
	type_id  goto 82
	enumstart  goto 129
	enum_name  goto 134
	function_spec  goto 49
	procedure_spec  goto 50
	func_name  goto 54
	proc_name  goto 55
	renobject  goto 122
	ren_sub  goto 123
	ren_pack  goto 124

state 66
	sep_subbody :  sep_substart decl_part_T_BEGIN statements opt_except T_END opt_id 

	T_BEGIN  shift 234
	.  error


state 67
	sep_packbody :  sep_packbegin T_END_opt_id 
	opt_id : _    (459)

	T_CHAR_STRING  shift 160
	T_IDENT  shift 159
	.  reduce 459

	opt_id  goto 235

state 68
	sep_packbody :  sep_packbegin T_BEGIN_statements opt_except T_END opt_id 
	opt_collid : _    (457)

	T_ABORT  shift 204
	T_ACCEPT  shift 213
	T_CASE  shift 207
	T_DELAY  shift 194
	T_EXIT  shift 202
	T_GOTO  shift 191
	T_IF  shift 212
	T_NULL  shift 168
	T_RAISE  shift 193
	T_RETURN  shift 190
	T_SELECT  shift 205
	T_IDENT  shift 201
	T_LS  shift 165
	.  reduce 457

	statements  goto 236
	ls_name  goto 209
	x_name  goto 203
	name  goto 192
	s_name  goto 210
	l_name  goto 211
	stat  goto 162
	lab_stat  goto 163
	statement  goto 164
	basic_stat  goto 166
	compound  goto 167
	if_stat  goto 170
	case_stat  goto 171
	select_stat  goto 172
	sa_accept  goto 173
	tagged_stat  goto 174
	if_begin  goto 184
	if_part  goto 197
	if  goto 206
	case_list  goto 185
	case  goto 198
	select_list  goto 186
	select  goto 199
	accept_stat  goto 187
	delay_stat  goto 181
	abort_stat  goto 182
	abort_l  goto 195
	accept_s  goto 200
	accept_start  goto 208
	opt_collid  goto 188
	bas_stat  goto 169
	exit_stat  goto 175
	return_stat  goto 176
	goto_stat  goto 177
	assignment  goto 178
	raise_stat  goto 179
	proc_call  goto 180
	select_entry  goto 183
	exit_unit  goto 189
	select_call  goto 196

state 69
	sep_taskbody :  sep_taskbegin T_BEGIN_statements opt_except T_END opt_id 
	opt_collid : _    (457)

	T_ABORT  shift 204
	T_ACCEPT  shift 213
	T_CASE  shift 207
	T_DELAY  shift 194
	T_EXIT  shift 202
	T_GOTO  shift 191
	T_IF  shift 212
	T_NULL  shift 168
	T_RAISE  shift 193
	T_RETURN  shift 190
	T_SELECT  shift 205
	T_IDENT  shift 201
	T_LS  shift 165
	.  reduce 457

	statements  goto 237
	ls_name  goto 209
	x_name  goto 203
	name  goto 192
	s_name  goto 210
	l_name  goto 211
	stat  goto 162
	lab_stat  goto 163
	statement  goto 164
	basic_stat  goto 166
	compound  goto 167
	if_stat  goto 170
	case_stat  goto 171
	select_stat  goto 172
	sa_accept  goto 173
	tagged_stat  goto 174
	if_begin  goto 184
	if_part  goto 197
	if  goto 206
	case_list  goto 185
	case  goto 198
	select_list  goto 186
	select  goto 199
	accept_stat  goto 187
	delay_stat  goto 181
	abort_stat  goto 182
	abort_l  goto 195
	accept_s  goto 200
	accept_start  goto 208
	opt_collid  goto 188
	bas_stat  goto 169
	exit_stat  goto 175
	return_stat  goto 176
	goto_stat  goto 177
	assignment  goto 178
	raise_stat  goto 179
	proc_call  goto 180
	select_entry  goto 183
	exit_unit  goto 189
	select_call  goto 196

state 70
	c_packbegin :  c_packstart decl_part_    (19)

	.  reduce 19


state 71
	c_genstart :  c_genbegin T_PACKAGE_T_IDENT T_IS 

	T_IDENT  shift 238
	.  error


state 72
	sep_substart :  sep_subhead T_IS_    (49)

	.  reduce 49


state 73
	sep_packbegin :  sep_packstart decl_part_    (56)

	.  reduce 56


state 74
	sep_taskbegin :  sep_taskstart decl_part_    (59)

	.  reduce 59


state 75
	c_genbegin :  c_gennode genpars_    (26)

	.  reduce 26


state 76
	genpars :  genparlist_    (29)
	genparlist :  genparlist_genparameter T_SEM_COL 

	T_TYPE  shift 84
	T_WITH  shift 79
	T_IDENT  shift 83
	.  reduce 29

	genparameter  goto 239
	type_start  goto 78
	array_start  goto 80
	genobjectpar  goto 81
	type_id  goto 82

state 77
	genparlist :  genparameter_T_SEM_COL 

	T_SEM_COL  shift 240
	.  error


state 78
	genparameter :  type_start_T_IS T_PRIVATE 
	genparameter :  type_start_T_IS T_RANGE T_BOX 
	genparameter :  type_start_T_IS T_DELTA T_BOX 
	genparameter :  type_start_T_IS T_ACCESS type_name 
	genparameter :  type_start_T_IS T_LP T_BOX T_RP 
	array_start :  type_start_T_IS T_ARRAY 

	T_IS  shift 241
	.  error


state 79
	genparameter :  T_WITH_subspec 
	genparameter :  T_WITH_subspec T_IS T_BOX 
	genparameter :  T_WITH_subspec T_IS expr 

	T_FUNCTION  shift 58
	T_PROCEDURE  shift 59
	.  error

	subspec  goto 242
	function_spec  goto 49
	procedure_spec  goto 50
	func_name  goto 54
	proc_name  goto 55

state 80
	genparameter :  array_start_T_LP index_list T_RP T_OF subtype_ind 

	T_LP  shift 243
	.  error


state 81
	genparameter :  genobjectpar_    (41)

	.  reduce 41


state 82
	type_start :  type_id_    (188)
	type_start :  type_id_disc_part 

	T_LP  shift 246
	.  reduce 188

	disc_part  goto 244
	disc_specs  goto 245

state 83
	genobjectpar :  T_IDENT_T_COLON geninoutspec 
	genobjectpar :  T_IDENT_T_COMMA genobjectpar 

	T_COLON  shift 247
	T_COMMA  shift 248
	.  error


state 84
	type_id :  T_TYPE_T_IDENT 

	T_IDENT  shift 249
	.  error


state 85
	sep_subhead :  sep_procid procedure_pars_    (50)

	.  reduce 50


state 86
	procedure_pars :  T_LP_proc_pars T_RP 

	T_IDENT  shift 252
	.  error

	proc_pars  goto 250
	proc_par  goto 251

state 87
	sep_subhead :  sep_funcid function_pars_T_RETURN type_name 

	T_RETURN  shift 253
	.  error


state 88
	function_pars :  T_LP_func_pars T_RP 

	T_IDENT  shift 256
	.  error

	func_pars  goto 254
	func_par  goto 255

state 89
	unit_list :  exception T_SEM_COL_locals 
	locals : _    (124)

	.  reduce 124

	locals  goto 257

state 90
	exception :  T_IDENT T_COLON_T_EXCEPTION T_RENAMES ls_name 
	ex_list :  T_IDENT T_COLON_T_EXCEPTION 

	T_EXCEPTION  shift 258
	.  error


state 91
	ex_list :  T_IDENT T_COMMA_ex_list 

	T_IDENT  shift 260
	.  error

	ex_list  goto 259

state 92
	c_package :  c_node locals privpart_T_END opt_id 

	T_END  shift 261
	.  error


state 93
	locals :  locals declaration_T_SEM_COL 

	T_SEM_COL  shift 262
	.  error


state 94
	privpart :  priv_node_locals 
	locals : _    (124)

	.  reduce 124

	locals  goto 263

state 95
	declaration :  object_decl_    (126)

	.  reduce 126


state 96
	declaration :  type_decl_    (127)

	.  reduce 127


state 97
	declaration :  package_    (128)

	.  reduce 128


state 98
	declaration :  gen_package_    (129)

	.  reduce 129


state 99
	declaration :  gen_instance_    (130)

	.  reduce 130


state 100
	declaration :  subspec_    (131)
	ren_sub :  subspec_T_RENAMES expr 

	T_RENAMES  shift 264
	.  reduce 131


state 101
	declaration :  useclause_    (132)
	useclause :  useclause_T_COMMA ls_name 

	T_COMMA  shift 265
	.  reduce 132


state 102
	declaration :  pragma_    (133)

	.  reduce 133


state 103
	declaration :  renamer_    (134)

	.  reduce 134


state 104
	declaration :  taskobject_    (135)

	.  reduce 135


state 105
	declaration :  exception_    (136)

	.  reduce 136


state 106
	priv_node :  T_PRIVATE_    (110)

	.  reduce 110


state 107
	object_decl :  T_IDENT_T_COLON easy_spec 
	object_decl :  T_IDENT_T_COLON subtype_ind opt_expr 
	object_decl :  T_IDENT_T_COMMA object_decl 
	exception :  T_IDENT_T_COLON T_EXCEPTION T_RENAMES ls_name 
	renobject :  T_IDENT_T_COLON c_typename T_RENAMES name 
	ex_list :  T_IDENT_T_COLON T_EXCEPTION 
	ex_list :  T_IDENT_T_COMMA ex_list 

	T_COLON  shift 266
	T_COMMA  shift 267
	.  error


state 108
	type_decl :  private_type_    (173)

	.  reduce 173


state 109
	type_decl :  record_type_    (172)

	.  reduce 172


state 110
	type_decl :  array_type_    (174)

	.  reduce 174


state 111
	type_decl :  enum_type_    (175)

	.  reduce 175


state 112
	type_decl :  incomplete_type_    (176)

	.  reduce 176


state 113
	type_decl :  subtype_    (177)

	.  reduce 177


state 114
	type_decl :  access_type_    (178)

	.  reduce 178


state 115
	type_decl :  tasktype_    (179)

	.  reduce 179


state 116
	type_decl :  newtype_decl_    (180)

	.  reduce 180


state 117
	package :  p_node_locals privpart T_END opt_id 
	locals : _    (124)

	.  reduce 124

	locals  goto 268

state 118
	gen_package :  genbegin_locals privpart T_END opt_id 
	locals : _    (124)

	.  reduce 124

	locals  goto 269

state 119
	gen_instance :  T_PACKAGE_T_IDENT T_IS T_NEW instantiation 
	p_node :  T_PACKAGE_T_IDENT T_IS 
	ren_pack :  T_PACKAGE_T_IDENT T_RENAMES ls_name 

	T_IDENT  shift 270
	.  error


state 120
	useclause :  T_USE_ls_name 

	T_IDENT  shift 154
	.  error

	ls_name  goto 271
	s_name  goto 152
	l_name  goto 153

state 121
	pragma :  T_PRAGMA_T_IDENT 
	pragma :  T_PRAGMA_T_IDENT T_LP ls_name T_RP 
	pragma :  T_PRAGMA_T_IDENT T_LP ls_name T_COMMA ls_name T_RP 
	pragma :  T_PRAGMA_T_IDENT T_LP ls_name T_COMMA ls_name T_COMMA T_CHAR_STRING T_RP 

	T_IDENT  shift 272
	.  error


state 122
	renamer :  renobject_    (290)

	.  reduce 290


state 123
	renamer :  ren_sub_    (291)

	.  reduce 291


state 124
	renamer :  ren_pack_    (292)

	.  reduce 292


state 125
	taskobject :  tn_    (98)

	.  reduce 98


state 126
	private_type :  type_start_T_IS limited T_PRIVATE 
	incomplete_type :  type_start_    (199)
	access_type :  type_start_T_IS T_ACCESS type_name 
	access_type :  type_start_T_IS T_ACCESS filtype constraint 
	newtype_decl :  type_start_T_IS T_RANGE range 
	newtype_decl :  type_start_T_IS T_NEW c_typename 
	newtype_decl :  type_start_T_IS T_NEW c_typename constraint 
	record_start :  type_start_T_IS T_RECORD 
	array_start :  type_start_T_IS T_ARRAY 
	enum_name :  type_start_T_IS T_LP 

	T_IS  shift 273
	.  reduce 199


state 127
	record_type :  record_start_field_list T_END T_RECORD 

	T_CASE  shift 281
	T_NULL  shift 277
	T_IDENT  shift 282
	.  error

	field_list  goto 274
	comp_seq  goto 275
	var_part  goto 276
	comp  goto 278
	comp_list  goto 280
	selection  goto 279

state 128
	array_type :  array_start_T_LP index_list T_RP T_OF subtype_ind 
	array_type :  array_start_T_LP index_constraints T_RP T_OF subtype_ind 

	T_LP  shift 283
	.  error


state 129
	enum_type :  enumstart_T_RP 
	enumstart :  enumstart_T_COMMA enumlit 

	T_COMMA  shift 285
	T_RP  shift 284
	.  error


state 130
	subtype :  T_SUBTYPE_T_IDENT T_IS filter_ind 

	T_IDENT  shift 286
	.  error


state 131
	tasktype :  tasktypestart_    (102)
	tasktype :  tasktypestart_T_IS entry_list T_END opt_id 

	T_IS  shift 287
	.  reduce 102


state 132
	genbegin :  gennode_genpars T_PACKAGE T_IDENT T_IS 
	genpars : _    (28)

	T_TYPE  shift 84
	T_WITH  shift 79
	T_IDENT  shift 83
	.  reduce 28

	genpars  goto 288
	genparlist  goto 76
	genparameter  goto 77
	type_start  goto 78
	array_start  goto 80
	genobjectpar  goto 81
	type_id  goto 82

state 133
	tn :  taskname_    (99)
	tn :  taskname_T_IS entry_list T_END opt_id 

	T_IS  shift 289
	.  reduce 99


state 134
	enumstart :  enum_name_enumlit 

	T_CHAR_LIT  shift 292
	T_IDENT  shift 291
	.  error

	enumlit  goto 290

state 135
	tasktypestart :  T_TASK_T_TYPE T_IDENT 
	taskname :  T_TASK_T_IDENT 

	T_TYPE  shift 293
	T_IDENT  shift 294
	.  error


state 136
	gennode :  T_GENERIC_    (93)

	.  reduce 93


state 137
	c_package :  context_spec T_PACKAGE T_IDENT_T_IS T_NEW instantiation 
	c_node :  context_spec T_PACKAGE T_IDENT_T_IS 

	T_IS  shift 295
	.  error


state 138
	c_packstart :  context_spec T_PACKAGE T_BODY_T_IDENT T_IS 

	T_IDENT  shift 296
	.  error


state 139
	c_substart :  context_spec subspec T_IS_    (23)

	.  reduce 23


state 140
	context_spec :  context_spec with_use T_SEM_COL_    (66)

	.  reduce 66


state 141
	sep_packstart :  context_spec separate T_PACKAGE_T_BODY T_IDENT T_IS 

	T_BODY  shift 297
	.  error


state 142
	sep_taskstart :  context_spec separate T_TASK_T_BODY T_IDENT T_IS 

	T_BODY  shift 298
	.  error


state 143
	sep_procid :  context_spec separate T_PROCEDURE_T_IDENT 

	T_IDENT  shift 299
	.  error


state 144
	sep_funcid :  context_spec separate T_FUNCTION_T_IDENT 

	T_IDENT  shift 300
	.  error


state 145
	withclause :  withclause T_COMMA_T_IDENT 

	T_IDENT  shift 301
	.  error


state 146
	use_inwith :  use_inwith T_COMMA_ls_name 

	T_IDENT  shift 154
	.  error

	ls_name  goto 302
	s_name  goto 152
	l_name  goto 153

state 147
	separate :  T_SEPARATE T_LP_ct_name T_RP 

	T_IDENT  shift 304
	.  error

	ct_name  goto 303

state 148
	function_spec :  func_name function_pars_T_RETURN type_name 

	T_RETURN  shift 305
	.  error


state 149
	procedure_spec :  proc_name procedure_pars_    (269)

	.  reduce 269


state 150
	withclause :  T_WITH T_IDENT_    (69)

	.  reduce 69


state 151
	use_inwith :  T_USE ls_name_    (71)

	.  reduce 71


state 152
	ls_name :  s_name_    (371)
